#### Don't forget to change the version number in configure.ac! ####

21 Jan 2004 Correct 'unloaded' tape processing - Ivan Warren
20 Jan 2004 Fix references to regs->inst to regs->ip - Greg Smith
19 Jan 2004 Return 'Already at BOT' sense on BSF when at BOT 
            (Detected by Mark Drummond) - Ivan Warren
16 Jan 2004 Performance Enhancement: REGS on run_cpu stack - Greg Smith
16 Jan 2004 Performance Enhancement: instfetch - Greg Smith
19 Dec 2003 Correct Keyboard Shortcuts for pseudo-graphical Console - Volker Bandke, code by Marian Gasparovic
17 Dec 2003 Correct structure size boundaries for ARM compiles - Ivan Warren
12 Dec 2003 Clear tlb every 2^16 invalidations instead of 2^8 - Greg Smith
05 Dec 2003 Move IS_IC_TRACE check to slowloop in run_cpu - Greg Smith
05 Dec 2003 Clear regs->ve every 2^20 invalidations instead of 2^12 - Greg Smith
05 Dec 2003 Add "filename completion" shortcut via TAB character to panel.c - Volker Bandke, original code by Marian Gasparovic
01 Dec 2003 Signal Quiesce (shutdown) & ssd command - Jan Jaeger
29 Nov 2003 Fix race condition in console.c recv_3270_data causing 100%
            CPU utilization, zero MIPS" Hercules hang symptom (version
            in configure.ac version bumped to 3.00a.5) - Fish
29 Nov 2003 Fix "passing arg n of <function> from incompatible pointer type"
            warnings in codepage.c, dat.h, stack.c, xstore.c - Fish
29 Nov 2003 Fix reset_channel_path - Mark Drummond by Greg Smith
28 Nov 2003 Flush Buffer On lost data condition in 2703 handler - Ivan Warren
27 Nov 2003 CTCI/LCS: fix enqueue full frame buffer loop; enable thread
            joining at LCS close - Fish
26 Nov 2003 Performance enhancements for CLM/ICM/STCM and XC - Greg Smith
26 Nov 2003 ia32 assists for virtual store memcpy - Greg Smith
26 Nov 2003 console.c: ignore "Negotiate About Window Size" from telnet
            client so e.g. WinNT telnet client works - Greg Price by Fish